# AIrabish

./: README.md  credit_card_data.csv  credit_card_logistic_regression.ipynb  software_companies_pandas_solutions .ipynb
Topic1_LLMs_Prompt_Engineering 2/: LLMs_v2.ipynb  LLMs_v2_updated.ipynb
agenticai/langchain_agentic_examples/: 01_basic_llm.py  02_simple_agent.py  03_weather_agent.py  04_classic_memory.py  05_prompt_template.py  06_file_reader_agent.py  07_faq_agent.py  08_csv_agent.py  09_multiagent_simple.py  10_planner_executor.py  11_multiagent_research_summary.py  12_multiagent_teacher_evaluator.py  13_multiagent_planner_executor.py  multiagent.py  multiagents-independenttasks.py  requirements.txt  resumescreening.py  resumeshortlist.py  sample.txt
genai/Topic1_LLMs/: LLMs_v2.ipynb  LangChain_Prompts.ipynb
genai/Topic2_Hugging_Face/: app.py  (+4 more)
mcp_usecases/17_mcp_gmail/: README.md  client_secret.json  main.py  pyproject.toml  requirements.txt
mcp_usecases/19_langchain/: README.md  main_gemini.py  main_openai.py  pyproject.toml  requirements.txt  test.txt
mcp_usecases/19_mcp_langchain/: app.py  main.py  pyproject.toml
nlp/: 1_stemming.ipynb  2_Lemmatization.ipynb  NLTK_examples.ipynb
programs/: credit_card_logistic_regression.ipynb  dictionarymethods.py  finaloutput.csv  finaloutput1.csv  ifconditions.py  iterations.py  lambdafunctions.py  librarydemo.py  listmethods.py  model.pkl  notes.txt  reademp.ipynb  readfromdb.py  readlist.ipynb  setmethods.py  software_companies_pandas_solutions .ipynb  stringmethods.py  tupledemo.py  userdefinedfunctions.py
(+77 files in other folders)
